--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <ion-icon size="large" name="navigate-outline" style="vertical-align: bottom;"></ion-icon>
-                    <span>Pages Navgation</span>
+                    <div class="navbar-brand" href="#">
+                        <h2><i class="fa fa-link"></i> <span>Pages Navgation</span></h2>
+                    </div>
                 </a>
                 <div class="collapse navbar-collapse" id="navbarColor03">
                     <ul class="navbar-nav me-auto">
@@ -50,8 +51,8 @@
 
     <script src="cdn/vue/vue.min.js"></script>
     <script src="api/gitee.js"></script>
-    <script src="cdn/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="cdn/bootswatch/bootstrap.Morph.min.css" />
+    <link href="../cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <script>
 
         let originLinks = [];
