--- a/yanhui.html
+++ b/yanhui.html
@@ -12,6 +12,6 @@
 <script>
     let isProd = true;
 </script>
-<script src="/cdn/require.min.js" data-main="libs/min/main.min"></script>
+<script src="/cdn/require.min.js" data-main="libs/main.min"></script>
 </body>
 </html>
