--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
                     </ul>
                     <div class="d-flex">
-                        <input class="form-control me-sm-2" type="text" placeholder="Search Links" @keyup="filter" v-model="searchTxt" />
+                        <input class="form-control me-sm-2" type="text" placeholder="Search Links" @keyup="filter"
+                            v-model="searchTxt" />
                     </div>
                 </div>
             </div>
@@ -39,9 +40,9 @@
         <div class="container mt-4">
             <div class="row justify-content-center">
                 <div class="col-md-4 col-lg-3 p-2" v-for="link in links">
-                    <div class="alert alert-dismissible alert-light pages-link" @click="open(link)">
-                        <h4>{{link.title}}</h4>
-                        <p>{{link.note}}</p>
+                    <div class="alert alert-dismissible alert-light pages-link overflow-hidden" @click="open(link)">
+                        <h4 class="text-nowrap" :title="link.title">{{link.title}}</h4>
+                        <p class="d-inline text-nowrap" :title="link.note">{{link.note}}</p>
                     </div>
                 </div>
             </div>
