--- a/preview.html
+++ b/preview.html
@@ -38,8 +38,9 @@
                     .then(res => res.json())
                     .then(data => {
                         let content = data.content;
-                        content && localStorage.setItem(storageKey, base64.decode(content));
-                        call && call(content);
+                        let decodeJson = base64.decode(content);
+                        content && localStorage.setItem(storageKey, decodeJson);
+                        call && call(decodeJson);
                     }).catch(e => {
                         // location.href = "/login.html";
                     });
