--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <div class="navbar-brand" href="#">
-                        <h2><i class="fa fa-link"></i> <span>Links</span></h2>
+                        <h2>
+                            <i class="fa fa-sitemap"></i>
+                            <span>SiteMap</span>
+                        </h2>
                     </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
