--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/jpeg" sizes="80x80" href="/imgs/logo.jpg" />
-    <title>Links</title>
+    <title>SiteMap</title>
     <link rel="stylesheet" href="cdn/bootswatch/bootstrap.Morph.min.css" />
     <link href="cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <style type="text/css">
