--- a/dev.html
+++ b/dev.html
@@ -13,7 +13,7 @@
 <script>
     let isProd = false;
 </script>
-<script src="/cdn/require.min.js" data-main="libs/main"></script>
+<script src="/cdn/require.min.js" data-main="libs/yanhui/main"></script>
 
 </body>
 </html>
