--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/jpeg" sizes="80x80" href="/imgs/logo.jpg"/>
+    <link rel="icon" type="image/jpeg" sizes="80x80" href="/imgs/logo.jpg" />
     <title>Loading...~😀</title>
 </head>
+
 <body>
 
-<div id="root"></div>
-<script>
-    let isProd = false;
-</script>
-<script src="/cdn/require.min.js" data-main="libs/public/main"></script>
+    <div id="root"></div>
+    <script>
+        let isProd = false;
+    </script>
+    <link href="/cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <script src="/cdn/bootstrap/popper.min.js"></script>
+    <script src="/cdn/bootstrap/bootstrap.min.js"></script>
+    <script src="/cdn/require.min.js" data-main="libs/public/main"></script>
 </body>
+
 </html>
