--- a/index.dev.html
+++ b/index.dev.html
@@ -12,12 +12,12 @@
 
     <div id="root"></div>
     <script>
-        let isProd = true;
+        let isProd = false;
     </script>
     <link href="/cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <script src="/cdn/bootstrap/popper.min.js"></script>
     <script src="/cdn/bootstrap/bootstrap.min.js"></script>
-    <script src="/cdn/require.min.js" data-main="libs/public/main.min"></script>
+    <script src="/cdn/require.min.js" data-main="libs/public/main"></script>
 </body>
 
 </html>
