--- a/pages/jsonview.html
+++ b/pages/jsonview.html
@@ -22,7 +22,7 @@
 
     <div id="root"></div>
 
-    <link rel="stylesheet" href="../cdn/bootswatch/bootstrap.Morph.min.css" />
+    <link rel="stylesheet" href="../cdn/bootswatch/bootstrap.morphme.min.css" />
     <link href="../cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
     <script src="../cdn/react/react.production.min.js"></script>
