--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <div id="root"></div>
+    <div id="layout" style="display: none;"></div>
     <script>
         let isProd = true;
     </script>
