--- a/login.html
+++ b/login.html
@@ -251,9 +251,7 @@
                 },
 
                 navPage() {
-                    let search = window.location.search;
-                    history.go(-1);
-                    location.reload();
+                    window.location.href = "/yanhui.html";
                 }
             },
             mounted() {
