--- a/pages/jsonview.html
+++ b/pages/jsonview.html
@@ -32,17 +32,55 @@
     <script type="text/babel">
 
         let storage_jsontxt_key = "pages-jsonview-jsontxt";
+        let dbRequest = window.indexedDB.open("yanhui");
+        let db;
+        dbRequest.onerror = function (event) {
+            console.log('数据库打开报错');
+        };
+        dbRequest.onsuccess = function (event) {
+            db = dbRequest.result;
+            console.log('数据库打开成功');
+            ReactDOM.render(
+                <AppRoot />,
+                document.getElementById('root')
+            );
+        };
+
+        dbRequest.onupgradeneeded = function (event) {
+            db = event.target.result;
+            // 新建一张jsonview的表,并自动生成主键
+            db.createObjectStore('jsonview', { autoIncrement: true });
+            console.log("新建表成功!");
+        }
 
         function AppRoot() {
             let storageTxt = localStorage.getItem(storage_jsontxt_key);
             if (!storageTxt) storageTxt = "{}";
             let [jsonTxt, setJsonTxt] = React.useState(storageTxt);
             let [data, setData] = React.useState({});
+            let [jsonList, setJsonList] = React.useState([]);
+            let [selectedHis, setSelectedHis] = React.useState('');
+            let [fileName, setFileName] = React.useState('');
             let updatedSrc = {};
 
             React.useEffect(() => {
                 initJsonTree();
+                initHis();
             }, [])
+
+            function initHis() {
+                var objectStore = db.transaction('jsonview').objectStore('jsonview');
+                let dbJsonList = [];
+                objectStore.openCursor().onsuccess = function (event) {
+                    var cursor = event.target.result;
+                    if (cursor) {
+                        dbJsonList.unshift(cursor.value);
+                        cursor.continue();
+                    } else {
+                        setJsonList(dbJsonList);
+                    }
+                };
+            }
 
             function initJsonTree() {
                 updatedSrc = JSON.parse(jsonTxt);
@@ -65,26 +103,61 @@
                 setJsonTxt(JSON.stringify(updatedSrc, null, 4));
             }
 
+            function saveJson() {
+                var request = db.transaction(['jsonview'], 'readwrite')
+                    .objectStore('jsonview')
+                    .add({ data, title: fileName === '' ? new Date().toLocaleString() : fileName });
+                request.onsuccess = function (event) {
+                    console.log('数据写入成功');
+                    initHis();
+                    setFileName('');
+                };
+                request.onerror = function (event) {
+                    console.log('数据写入失败');
+                }
+            }
+
+            function selectHis(json) {
+                setSelectedHis(json.title);
+                jsonChange(JSON.stringify(json.data, null, 4));
+            }
+
             return (
                 <div>
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="container-fluid">
                             <div class="navbar-brand" href="#">
-                                <h2><i class="fa fa-camera"></i> <span>Json View</span></h2>
+                                <h2><i class="fa fa-camera text-primary"></i> <span>Json View</span></h2>
                             </div>
                         </div>
                     </nav>
                     <div class="container-fluid">
                         <div class="row p-1 mt-2">
                             <div class="col-md-5">
-                                <textarea placeholder="请输入json字符串" class="form-control jv-json-txt" onChange={e => jsonChange(e.target.value)} value={jsonTxt}></textarea>
+                                <textarea placeholder="请输入json字符串" class="form-control jv-json-txt border border-primary rounded" onChange={e => jsonChange(e.target.value)} value={jsonTxt}></textarea>
                             </div>
-                            <div class="col-md-7 p-2 jv-json-view border border-secondary rounded">
+                            <div class="col-md-5 p-2 jv-json-view border border-primary rounded">
                                 <reactJsonView.default src={data}
                                     onEdit={modifyEvent}
                                     onAdd={modifyEvent}
                                     onDelete={modifyEvent}
                                     displayDataTypes={false} />
+                            </div>
+                            <div class="col-md-2 bg-light p-1">
+                                <div>
+                                    <button type="button" class="btn btn-primary mb-2" onClick={saveJson}>Save Json To IndexedDB</button>
+                                    <input value={fileName} onChange={(e) => { setFileName(e.target.value) }} class="form-control" type="text" placeholder="请输入保存文件名称" />
+                                </div>
+                                <h3 class="my-3">Json History</h3>
+                                <div class="list-group mt-2">
+                                    {
+                                        jsonList.map(json => {
+                                            return (
+                                                <a href="#" onClick={() => selectHis(json)} class={`list-group-item list-group-item-action ${selectedHis === json.title ? 'active' : ''}`}>{json.title}</a>
+                                            )
+                                        })
+                                    }
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -93,11 +166,6 @@
             )
 
         }
-
-        ReactDOM.render(
-            <AppRoot />,
-            document.getElementById('root')
-        );
 
 
     </script>
